--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
 		"aos": "^3.0.0-beta.6",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"embla-carousel-autoplay": "^8.5.2",
 		"embla-carousel-react": "^8.5.2",
 		"hamburger-react": "^2.5.2",
 		"lucide-react": "^0.471.0",
 		"next": "15.1.4",
 		"next-video": "^2.0.0",
+		"preline": "^2.7.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
